--- a/src/app/public/create-suitcase/create-suitcase.component.html
+++ b/src/app/public/create-suitcase/create-suitcase.component.html
@@ -95,75 +95,75 @@
           <div *ngFor="let item of suitcaseList['tech']; let i=index" class="common-card-body">
             <div class="card-header card-subsubheader" *ngIf="showSubsubheader('tech', item.name)">
               <mat-icon matSuffix matTooltip="Tecnología" [matTooltipPosition]="'below'">photo_camera</mat-icon>
-              <span>Tecnología</span>
+              <span i18n="@@technology">Technology</span>
             </div>
             <ng-container *ngTemplateOutlet="cardBody; context: { $implicit: item, i:i  };"></ng-container>
           </div>
           <div *ngFor="let item of suitcaseList['cleanliness']; let i=index" class="common-card-body">
             <div class="card-header card-subsubheader" *ngIf="showSubsubheader('cleanliness', item.name)">
               <mat-icon matSuffix matTooltip="Aseo" [matTooltipPosition]="'below'">clean_hands</mat-icon>
-              <span>Aseo personal</span>
+              <span i18n="@@cleanliness">Cleanliness</span>
             </div>
             <ng-container *ngTemplateOutlet="cardBody; context: { $implicit: item, i:i  };"></ng-container>
           </div>
           <div *ngFor="let item of suitcaseList['clothes']; let i=index" class="common-card-body">
             <div class="card-header card-subsubheader" *ngIf="showSubsubheader('clothes', item.name)">
               <mat-icon matSuffix matTooltip="Ropa" [matTooltipPosition]="'below'">checkroom</mat-icon>
-              <span>Ropa</span>
+              <span i18n="@@clothes">Clothes</span>
             </div>
             <ng-container *ngTemplateOutlet="cardBody; context: { $implicit: item, i:i  };"></ng-container>
           </div>
           <div *ngFor="let item of suitcaseList['medicines']; let i=index" class="common-card-body">
             <div class="card-header card-subsubheader" *ngIf="showSubsubheader('medicines', item.name)">
               <mat-icon matSuffix matTooltip="Medicinas" [matTooltipPosition]="'below'">medical_services</mat-icon>
-              <span>Medicinas</span>
+              <span i18n="@@medicines">Medicines</span>
             </div>
             <ng-container *ngTemplateOutlet="cardBody; context: { $implicit: item, i:i  };"></ng-container>
           </div>
           <div *ngFor="let item of suitcaseList['documents']; let i=index" class="common-card-body">
             <div class="card-header card-subsubheader" *ngIf="showSubsubheader('documents', item.name)">
               <mat-icon matSuffix matTooltip="Documentos" [matTooltipPosition]="'below'">description</mat-icon>
-              <span>Documentación</span>
+              <span i18n="@@documents">Documents</span>
             </div>
             <ng-container *ngTemplateOutlet="cardBody; context: { $implicit: item, i:i  };"></ng-container>
           </div>
           <div *ngFor="let item of suitcaseList['beach']; let i=index" class="common-card-body">
             <div class="card-header card-subsubheader" *ngIf="showSubsubheader('beach', item.name)">
               <mat-icon matSuffix matTooltip="Playa" [matTooltipPosition]="'below'">beach_access</mat-icon>
-              <span>Playa</span>
+              <span i18n="@@beach">Beach</span>
             </div>
             <ng-container *ngTemplateOutlet="cardBody; context: { $implicit: item, i:i  };"></ng-container>
           </div>
           <div *ngFor="let item of suitcaseList['mountain']; let i=index" class="common-card-body">
             <div class="card-header card-subsubheader" *ngIf="showSubsubheader('mountain', item.name)">
               <mat-icon matSuffix matTooltip="Montaña" [matTooltipPosition]="'below'">filter_hdr</mat-icon>
-              <span>Montaña</span>
+              <span i18n="@@mountain">Mountain</span>
             </div>
             <ng-container *ngTemplateOutlet="cardBody; context: { $implicit: item, i:i  };"></ng-container>
           </div>
           <div *ngFor="let item of suitcaseList['sport']; let i=index" class="common-card-body">
             <div class="card-header card-subsubheader" *ngIf="showSubsubheader('sport', item.name)">
               <mat-icon matSuffix matTooltip="Deporte" [matTooltipPosition]="'below'">sports_soccer</mat-icon>
-              <span>Deporte</span>
+              <span i18n="@@sport">Sport</span>
             </div>
             <ng-container *ngTemplateOutlet="cardBody; context: { $implicit: item, i:i  };"></ng-container>
           </div>
           <div *ngFor="let item of suitcaseList['baby']; let i=index" class="common-card-body">
             <div class="card-header card-subsubheader" *ngIf="showSubsubheader('baby', item.name)">
               <mat-icon matSuffix matTooltip="Bebé" [matTooltipPosition]="'below'">baby_changing_station</mat-icon>
-              <span>Bebé</span>
+              <span i18n="@@baby">Baby</span>
             </div>
             <ng-container *ngTemplateOutlet="cardBody; context: { $implicit: item, i:i  };"></ng-container>
           </div>
           <div *ngFor="let item of suitcaseList['pet']; let i=index" class="common-card-body">
             <div class="card-header card-subsubheader" *ngIf="showSubsubheader('pet', item.name)">
               <mat-icon matSuffix matTooltip="Mascota" [matTooltipPosition]="'below'">pets</mat-icon>
-              <span>Mascota</span>
+              <span i18n="@@pet">Pet</span>
             </div>
             <ng-container *ngTemplateOutlet="cardBody; context: { $implicit: item, i:i  };"></ng-container>
           </div>
           <div *ngFor="let item of suitcaseList['others']; let i=index" class="common-card-body">
-            <div class="card-header card-subsubheader" *ngIf="showSubsubheader('others', item.name)">Otros</div>
+            <div class="card-header card-subsubheader" *ngIf="showSubsubheader('others', item.name)" i18n>Others</div>
             <ng-container *ngTemplateOutlet="cardBody; context: { $implicit: item, i:i  };"></ng-container>
           </div>
         </div>
